--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,8 @@
 				"useSelfClosingElements": "warn"
 			},
 			"a11y": {
-				"noSvgWithoutTitle": "warn"
+				"noSvgWithoutTitle": "warn",
+				"useAltText": "off"
 			}
 		}
 	}
